--- a/index.html
+++ b/index.html
@@ -3,56 +3,101 @@
   <head>
     <meta charset="utf-8" />
     <title>TO DO LIST !!!</title>
+
+    <style>
+      .contents {
+        margin: 20px 200px;
+      }
+      .todo-form {
+        padding: 20px;
+        background-color: #fff9ee;
+        border-radius: 10px;
+        box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.5);
+      }
+      .input-content {
+        margin: 10px;
+      }
+      .history {
+        padding: 20px;
+        box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.5);
+      }
+      .text-history {
+        word-wrap: break-word;
+      }
+      textarea {
+        box-sizing: border-box;
+        -moz-box-sizing: border-box; /* Firefox */
+        -webkit-box-sizing: border-box; /* Chrome, Safari */
+      }
+    </style>
   </head>
   <body>
-    <h1>TO DO LIST !!!</h1>
-    <form onsubmit="add()" action="#">
-      <p>
-        Title:
-        <input type="text" id="title" />
-      </p>
-      <p>
-        TODO:
-        <textarea id="text" rows="4" cols="40"></textarea>
-      </p>
-      <p>
-        When:
-        <input type="datetime-local" id="datetime" />
-      </p>
-      <input type="submit" />
-    </form>
-    <div id="history-list"></div>
+    <div class="contents">
+      <form onsubmit="add()" action="#" class="todo-form">
+        <div class="input-content">
+          <div>タイトル</div>
+          <input type="text" id="title" />
+        </div>
+        <div class="input-content">
+          <div>内容</div>
+          <textarea id="text" rows="4" cols="50" placeholder="必須"></textarea>
+        </div>
+        <div class="input-content">
+          <div>期限</div>
+          <input type="datetime-local" id="datetime" />
+        </div>
+        <input type="submit" value="追加" />
+        <!-- <input type="button" value="csv で保存" /> -->
+      </form>
+      <br />
+      <hr />
+      <h3>To Do List</h3>
+      <div id="history-list"></div>
+    </div>
   </body>
+
   <script>
     function add() {
       var title = document.getElementById("title").value;
       var text = document.getElementById("text").value;
       var datetime = document.getElementById("datetime").value;
 
-      var titleHistoryElement = document.createElement("p");
+      if (title == "" && text == "" && datetime == "") {
+        window.alert("項目に入力してください。");
+        return false;
+      }
+
+      var titleHistoryElement = document.createElement("h2");
       var titleHistoryContent = document.createTextNode(title);
       titleHistoryElement.appendChild(titleHistoryContent);
 
       var textHistoryElement = document.createElement("p");
       var textHistoryContent = document.createTextNode(text);
       textHistoryElement.appendChild(textHistoryContent);
+      textHistoryElement.setAttribute("class", "text-history");
 
       var datetimeHistoryElement = document.createElement("p");
-      var datetimeHistoryContent = document.createTextNode(datetime);
+      var datetimeHistoryContent = document.createTextNode(datetime + " まで");
+      if (datetime == "") {
+        datetimeHistoryContent = document.createTextNode("期限無し");
+      } else {
+        datetimeHistoryContent = document.createTextNode(datetime + " まで");
+      }
       datetimeHistoryElement.appendChild(datetimeHistoryContent);
 
       var doneElement = document.createElement("p");
-      var doneContent = document.createTextNode("done? ");
+      var doneContent = document.createTextNode(" 👈 done");
       var checkBoxElement = document.createElement("input");
       checkBoxElement.setAttribute("type", "checkbox");
-      doneElement.appendChild(doneContent);
       doneElement.appendChild(checkBoxElement);
+      doneElement.appendChild(doneContent);
 
       var parentHistory = document.createElement("div");
-      parentHistory.appendChild(doneElement);
+      parentHistory.setAttribute("class", "history");
       parentHistory.appendChild(titleHistoryElement);
       parentHistory.appendChild(textHistoryElement);
       parentHistory.appendChild(datetimeHistoryElement);
+      parentHistory.appendChild(doneElement);
 
       var parentDiv = document.getElementById("history-list");
       parentDiv.appendChild(parentHistory);
