--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <style>
       .contents {
-        margin: 20px 200px;
+        margin: 20px 10%;
       }
       .todo-form {
         padding: 20px;
