--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         datetimeHistoryElement.setAttribute("class", "datetime-history");
 
         var doneElement = document.createElement("p");
-        var doneContent = document.createTextNode(" 👈 done");
+        var doneContent = document.createTextNode(" done");
         var checkBoxElement = document.createElement("input");
         checkBoxElement.setAttribute("type", "checkbox");
         doneElement.appendChild(checkBoxElement);
