--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       }
       .text-history {
         word-wrap: break-word;
+        white-space: pre-wrap;
       }
       .datetime-history {
         font-size: small;
